--- a/esqueleto/game.vcxproj
+++ b/esqueleto/game.vcxproj
@@ -123,6 +123,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="aligntomovement_steering.cpp" />
     <ClCompile Include="align_steering.cpp" />
     <ClCompile Include="arrive_steering.cpp" />
     <ClCompile Include="character.cpp" />
@@ -133,6 +134,7 @@
     <ClCompile Include="host\GlutHostMain.cpp" />
     <ClCompile Include="host\ParticlePresets.cpp" />
     <ClCompile Include="params.cpp" />
+    <ClCompile Include="pathfollowing_steering.cpp" />
     <ClCompile Include="seek_steering.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -140,6 +142,7 @@
     <ClCompile Include="steering.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="aligntomovement_steering.h" />
     <ClInclude Include="align_steering.h" />
     <ClInclude Include="arrive_steering.h" />
     <ClInclude Include="character.h" />
@@ -149,6 +152,7 @@
     <ClInclude Include="host\GlutHost.h" />
     <ClInclude Include="host\ParticlePresets.h" />
     <ClInclude Include="params.h" />
+    <ClInclude Include="pathfollowing_steering.h" />
     <ClInclude Include="seek_steering.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="steering.h" />
