Added base of obstacle avoidance (parsing and debugging draw)

--- a/esqueleto/game.vcxproj
+++ b/esqueleto/game.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="host\GlutHost.cpp" />
     <ClCompile Include="host\GlutHostMain.cpp" />
     <ClCompile Include="host\ParticlePresets.cpp" />
+    <ClCompile Include="obstacleavoidance_steering.cpp" />
     <ClCompile Include="params.cpp" />
     <ClCompile Include="pathfollowing_steering.cpp" />
     <ClCompile Include="seek_steering.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="host\FolderWatcher-win.h" />
     <ClInclude Include="host\GlutHost.h" />
     <ClInclude Include="host\ParticlePresets.h" />
+    <ClInclude Include="obstacleavoidance_steering.h" />
     <ClInclude Include="params.h" />
     <ClInclude Include="pathfollowing_steering.h" />
     <ClInclude Include="seek_steering.h" />
