--- a/esqueleto/game.vcxproj.filters
+++ b/esqueleto/game.vcxproj.filters
@@ -25,6 +25,7 @@
     <ClCompile Include="aligntomovement_steering.cpp" />
     <ClCompile Include="pathfollowing_steering.cpp" />
     <ClCompile Include="obstacleavoidance_steering.cpp" />
+    <ClCompile Include="obstaclepath_steering.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="character.h" />
@@ -48,6 +49,7 @@
     <ClInclude Include="aligntomovement_steering.h" />
     <ClInclude Include="pathfollowing_steering.h" />
     <ClInclude Include="obstacleavoidance_steering.h" />
+    <ClInclude Include="obstaclepath_steering.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="host">
